; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_cpu_interrupt.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_cpu_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@smp_initialized = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@DBG_MACH_SCHED = common dso_local global i32 0, align 4
@MACH_REMOTE_AST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpu_interrupt(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @FALSE, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i64, i64* @smp_initialized, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @cpu_datap(i32 %8)
  %10 = call i64 @pmCPUExitIdle(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %7
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @i386_cpu_IPI(i32 %13)
  %15 = load i32, i32* @TRUE, align 4
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %12, %7, %1
  %17 = load i32, i32* @DBG_MACH_SCHED, align 4
  %18 = load i32, i32* @MACH_REMOTE_AST, align 4
  %19 = call i32 @MACHDBG_CODE(i32 %17, i32 %18)
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @KERNEL_DEBUG_CONSTANT(i32 %19, i32 %20, i32 %21, i32 0, i32 0, i32 0)
  ret void
}

declare dso_local i64 @pmCPUExitIdle(i32) #1

declare dso_local i32 @cpu_datap(i32) #1

declare dso_local i32 @i386_cpu_IPI(i32) #1

declare dso_local i32 @KERNEL_DEBUG_CONSTANT(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @MACHDBG_CODE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
